--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 
     <!-- MI CSS -->
     <link rel="stylesheet" href="./assets/style.css" />
@@ -82,7 +83,7 @@
                       <p><i class="bi bi-eye"></i> Visitas: <a id="visits-img-1">0</a></p>
                   </div>
                   <div class="row">
-                      <p>BUSINESS SOLUTION - El sistema diseñado para brindar soluciones a pequeñas, medianas o grandes
+                      <p><strong>SOLUTION</strong> - El sistema diseñado para brindar soluciones a pequeñas, medianas o grandes
                           empresas. Se adapta a los requerimientos propios de cada empresa.</p>
                   </div>
               </div>
@@ -95,7 +96,7 @@
                       <p><i class="bi bi-eye"></i> Visitas: <a id="visits-img-2">0</a></p>
                   </div>
                   <div class="row">
-                      <p>INTERACTIVE VOICE RESPONSE - Sistema desarrollado para funcionar conjuntamente con una placa IVR
+                      <p><strong>INTERACTIVE VOICE RESPONSE</strong> - Sistema desarrollado para funcionar conjuntamente con una placa IVR
                           mediante la cual se interrelaciona la PC con el teléfono.</p>
                   </div>
               </div>
@@ -108,7 +109,7 @@
                       <p><i class="bi bi-eye"></i> Visitas: <a id="visits-img-3">0</a></p>
                   </div>
                   <div class="row">
-                      <p>SISTEMA DE SUPERVISION Y CONTROL - Flexible y escalable que proporciona un aumento de
+                      <p><strong>SISTEMA DE SUPERVISION Y CONTROL</strong> - Flexible y escalable que proporciona un aumento de
                           productividad y facilita una rápida reacción ante un cambio en el mercado.</p>
                   </div>
               </div>
@@ -121,7 +122,7 @@
                       <p><i class="bi bi-eye"></i> Visitas: <a id="visits-img-4">0</a></p>
                   </div>
                   <div class="row">
-                      <p>FACTORY SCADA - Sistema de arquitectura abierta, capaz de adaptarse de acuerdo a las necesidades
+                      <p><strong>FACTORY SCADA</strong> - Sistema de arquitectura abierta, capaz de adaptarse de acuerdo a las necesidades
                           cambiantes de cualquier empresa (control total sobre los automatismos).</p>
                   </div>
               </div>
@@ -134,7 +135,7 @@
                       <p><i class="bi bi-eye"></i> Visitas: <a id="visits-img-5">0</a></p>
                   </div>
                   <div class="row">
-                      <p>EVO SCADA SERVER - Los datos llegan desde los nodos hasta el servidor para luego ser procesados
+                      <p><strong>EVO SCADA SERVER</strong> - Los datos llegan desde los nodos hasta el servidor para luego ser procesados
                           por el scada server que interpreta y muestra los valores obtenidos.</p>
                   </div>
               </div>
@@ -230,5 +231,6 @@
     <script type="module" src="./javascript/NavBarScroll.js"></script>
     <script src="./javascript/textTarea.js"></script>
     <script src="./javascript/script.js"></script>
+    
   </body>
 </html>
